--- a/src/index.html
+++ b/src/index.html
@@ -1,8 +1,9 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="utf-8">
-  <title>SipiApp</title>
+  <title>Sipi Guia Urbana</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/semantic-ui/2.2.10/semantic.min.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
