More good changes. Place and subcategory service developed more.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Sipi Guia Urbana</title>
-  <link rel="stylesheet" href="./assets/semantic/dist/semantic.min.css">
+  <link rel="stylesheet" href="/assets/semantic/dist/semantic.min.css">
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
