More work on Sipi front end.

--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,34 @@
 <!doctype html>
 <html lang="es">
-<head>
-  <meta charset="utf-8">
-  <title>Sipi Guia Urbana</title>
-  <link rel="stylesheet" href="/assets/semantic/dist/semantic.min.css">
-  <base href="/">
-
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+	<head>
+		<meta charset="utf-8">
+		<title>Sipi Guia Urbana</title>
+		<script>
+		  function initMap() {
+			var uluru = {lat: 12.1150, lng: -86.2362};
+			var map = new google.maps.Map(document.getElementById('map'), {
+			  zoom: 4,
+			  center: uluru
+			});
+			var marker = new google.maps.Marker({
+			  position: uluru,
+			  map: map
+			});
+		  }
+		</script>
+		<style>
+		  #map {
+			height: 400px;
+			width: 100%;
+		   }
+		</style>
+		<link rel="stylesheet" href="/assets/semantic/dist/semantic.min.css">
+		<base href="/">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/x-icon" href="favicon.ico">
+	</head>
+	<body>
+		<app-root></app-root>
+	</body>
+	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPZIW0HTQfO3qT3T8Lb96mZPYU2FtDGZs&callback=initMap"></script>
 </html>
