--- a/src/index.html
+++ b/src/index.html
@@ -22,10 +22,19 @@
 			width: 100%;
 		   }
 		</style>
-		<link rel="stylesheet" href="/assets/semantic/dist/semantic.min.css">
+		<link rel="stylesheet" href="/assets/semantic/dist/semantic.css">
+		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto">
 		<base href="/">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/x-icon" href="favicon.ico">
+		<style>
+		  body {
+		    font-family: 'Roboto', sans-serif !important;
+          }
+		  h1 {
+            font-family: 'Open Sans', sans-serif !important;
+		  }
+		</style>
 	</head>
 	<body>
 		<app-root></app-root>
