--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
             font-family: 'Open Sans', sans-serif !important;
 		  }
 		</style>
+		<script src="https://code.jquery.com/jquery-3.2.1.js" integrity="sha256-DZAnKJ/6XZ9si04Hgrsxu/8s717jcIzLy3oi35EouyE=" crossorigin="anonymous"></script>
+		<script src="/assets/semantic/dist/semantic.js"></script>
 	</head>
 	<body>
 		<app-root></app-root>
