--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <link href="favicon.ico" rel="icon" type="image/x-icon">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPZIW0HTQfO3qT3T8Lb96mZPYU2FtDGZs"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPZIW0HTQfO3qT3T8Lb96mZPYU2FtDGZs"></script> -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="/assets/js/bootstrap.bundle.js"></script>
     <title>Sipi Guia Urbana</title>
@@ -17,7 +17,7 @@
     <app-root></app-root>
   </body>
   <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPZIW0HTQfO3qT3T8Lb96mZPYU2FtDGZs"></script> -->
-  <script>
+  <!-- <script>
   window.twttr = (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0], t = window.twttr || {};
     if (d.getElementById(id)) return t;
@@ -31,12 +31,12 @@
     };
     return t;
   }(document, "script", "twitter-wjs"));
-  </script>
+  </script> -->
 
-  <script>
+  <!-- <script>
   $(function() {
     $('[data-toggle="tooltip"]').tooltip();
     $('[data-toggle="popover"]').popover();
   });
-  </script>
+  </script> -->
 </html>
