--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
   <body>
     <app-root></app-root>
   </body>
-  <!-- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPZIW0HTQfO3qT3T8Lb96mZPYU2FtDGZs"></script> -->
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAPZIW0HTQfO3qT3T8Lb96mZPYU2FtDGZs"></script>
   <!-- <script>
   window.twttr = (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0], t = window.twttr || {};
