Added rich card logo markup at a master template level.

--- a/src/index.html
+++ b/src/index.html
@@ -47,4 +47,12 @@
     $('[data-toggle="popover"]').popover();
   });
   </script> -->
+  <script type="application/ld+json">
+    {
+      "@context": "http://schema.org",
+      "@type": "Organization",
+      "url": "https://www.sipi.app",
+      "logo": "https://www.sipi.app/assets/images/sipi-logo-rich-card.png"
+    }
+  </script>
 </html>
