--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,8 @@
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="/assets/js/bootstrap.bundle.js"></script>
     <title>Sipi Aplicación Urbana</title>
+    <link rel="manifest" href="manifest.json">
+    <meta name="theme-color" content="#1976d2">
   </head>
   <body>
     <app-root></app-root>
